# tree-sitter-robots-txt

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  mise.toml  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml  release.yaml
bindings/c/: tree-sitter-robots-txt.pc.in  tree-sitter-robots.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_robots/: __init__.py  binding.c
bindings/python/tree_sitter_robots_txt/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRobots/: robots.h
bindings/swift/TreeSitterRobotsTests/: TreeSitterRobotsTests.swift
bindings/swift/TreeSitterRobotsTxt/: robots_txt.h
bindings/swift/TreeSitterRobotsTxtTests/: TreeSitterRobotsTxtTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: base.txt
